--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'org.springframework.boot' version '3.5.5'
     id 'io.spring.dependency-management' version '1.1.7'
     id "com.vanniktech.maven.publish" version "0.30.0"
@@ -10,7 +10,7 @@ plugins {
 import com.vanniktech.maven.publish.SonatypeHost
 
 group = 'io.github.riversking'
-version = '1.0.0'
+version = '1.0.3'
 
 java {
     toolchain {
@@ -37,24 +37,23 @@ ext {
 }
 
 dependencies {
+    api 'com.google.guava:guava:33.4.0-jre'
+    api 'org.apache.commons:commons-lang3:3.18.0'
+    api 'org.apache.commons:commons-collections4:4.4'
+    api 'commons-codec:commons-codec:1.12'
+    api 'commons-io:commons-io:2.14.0'
+    api 'com.alibaba:fastjson:2.0.58'
+    api 'cn.hutool:hutool-all:5.8.40'
+    api 'org.projectlombok:lombok'
+    implementation 'io.jsonwebtoken:jjwt:0.13.0'
+    implementation 'org.hashids:hashids:1.0.3'
     implementation 'org.springframework:spring-web'
     implementation 'org.springframework.cloud:spring-cloud-bus'
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'com.google.protobuf:protobuf-java:4.29.3'
     implementation 'com.googlecode.protobuf-java-format:protobuf-java-format:1.4'
     implementation 'com.google.protobuf:protobuf-java-util:4.29.3'
-    implementation 'com.google.guava:guava:33.4.0-jre'
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
-    implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation 'commons-codec:commons-codec:1.12'
-    implementation 'commons-io:commons-io:2.14.0'
-    implementation 'com.alibaba:fastjson:1.2.83'
-    implementation 'org.hashids:hashids:1.0.3'
-    compileOnly 'org.projectlombok:lombok:1.18.36'
-    testImplementation 'junit:junit:4.13.1'
-    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 dependencyManagement {
@@ -79,7 +78,7 @@ tasks.withType(Javadoc).configureEach {
 
 mavenPublishing {
     // 配置坐标,参数一要和命名空间一致，参二为项目名(GroupId),参三为版本号 "1.0.0"
-    coordinates("io.github.riversking", "rivers-core", "1.0.0")
+    coordinates("io.github.riversking", "rivers-core", "1.0.3")
     // 配置 pom 文件信息
     pom {
         // 项目名
