Update Protobuf converter and Jackson dependencies

--- a/build2.gradle
+++ b/build2.gradle
@@ -37,16 +37,14 @@ ext {
 }
 
 dependencies {
-    api 'com.google.guava:guava:33.4.0-jre'
-    api 'org.apache.commons:commons-lang3:3.18.0'
-    api 'org.apache.commons:commons-collections4:4.4'
-    api 'commons-codec:commons-codec:1.12'
-    api 'commons-io:commons-io:2.14.0'
-    api 'com.alibaba:fastjson:2.0.58'
-    api 'cn.hutool:hutool-all:5.8.40'
-    api 'org.projectlombok:lombok'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
-    implementation 'io.jsonwebtoken:jjwt:0.13.0'
+    implementation 'com.google.guava:guava:33.4.0-jre'
+    implementation 'org.apache.commons:commons-lang3:3.18.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'commons-codec:commons-codec:1.12'
+    implementation 'commons-io:commons-io:2.14.0'
+    implementation 'com.alibaba:fastjson:2.0.58'
+    implementation 'cn.hutool:hutool-all:5.8.40'
+    implementation 'org.projectlombok:lombok'
     implementation 'org.hashids:hashids:1.0.3'
     implementation 'org.springframework:spring-web'
     implementation 'org.springframework.cloud:spring-cloud-bus'
